# pgm-build-dependencies

./: .gitignore  README.md  pyproject.toml
.github/workflows/: sync-headers.yml
LICENSES/: eigen
results/: licenses.txt  sbom_spdx.json
src/pgm_build_dependencies/boost/: INSTALL_RECEIPT.json  sbom.spdx.json
src/pgm_build_dependencies/boost/lib/cmake/boost_atomic-1.88.0/: boost_atomic-config.cmake  libboost_atomic-variant-shared.cmake  libboost_atomic-variant-static.cmake
src/pgm_build_dependencies/boost/lib/cmake/boost_atomic-1.89.0/: boost_atomic-config.cmake  libboost_atomic-variant-shared.cmake  libboost_atomic-variant-static.cmake
src/pgm_build_dependencies/boost/lib/cmake/boost_charconv-1.88.0/: boost_charconv-config.cmake  libboost_charconv-variant-shared.cmake  libboost_charconv-variant-static.cmake
src/pgm_build_dependencies/boost/lib/cmake/boost_charconv-1.89.0/: boost_charconv-config.cmake  libboost_charconv-variant-shared.cmake  libboost_charconv-variant-static.cmake
src/pgm_build_dependencies/boost/lib/cmake/boost_chrono-1.88.0/: boost_chrono-config.cmake  libboost_chrono-variant-shared.cmake  libboost_chrono-variant-static.cmake
src/pgm_build_dependencies/boost/lib/cmake/boost_chrono-1.89.0/: boost_chrono-config.cmake  libboost_chrono-variant-shared.cmake  libboost_chrono-variant-static.cmake
src/pgm_build_dependencies/boost/lib/cmake/boost_container-1.88.0/: boost_container-config.cmake  libboost_container-variant-shared.cmake  libboost_container-variant-static.cmake
src/pgm_build_dependencies/boost/lib/cmake/boost_container-1.89.0/: boost_container-config.cmake  libboost_container-variant-shared.cmake  libboost_container-variant-static.cmake
src/pgm_build_dependencies/boost/lib/cmake/boost_context-1.88.0/: boost_context-config.cmake  libboost_context-variant-shared.cmake  libboost_context-variant-static.cmake
src/pgm_build_dependencies/boost/lib/cmake/boost_context-1.89.0/: boost_context-config.cmake  libboost_context-variant-shared.cmake  libboost_context-variant-static.cmake
src/pgm_build_dependencies/boost/lib/cmake/boost_contract-1.88.0/: boost_contract-config.cmake  libboost_contract-variant-shared.cmake  libboost_contract-variant-static.cmake
src/pgm_build_dependencies/boost/lib/cmake/boost_contract-1.89.0/: boost_contract-config.cmake  libboost_contract-variant-shared.cmake  libboost_contract-variant-static.cmake
src/pgm_build_dependencies/boost/lib/cmake/boost_coroutine-1.88.0/: boost_coroutine-config.cmake  (+2 more)
src/pgm_build_dependencies/eigen/: INSTALL_RECEIPT.json  sbom.spdx.json
src/pgm_build_dependencies/eigen/share/pkgconfig/: eigen3.pc
src/pgm_build_dependencies/msgpack_cxx/: INSTALL_RECEIPT.json  sbom.spdx.json
src/pgm_build_dependencies/nlohmann_json/: INSTALL_RECEIPT.json  sbom.spdx.json
src/pgm_build_dependencies/nlohmann_json/share/pkgconfig/: nlohmann_json.pc
(+226 files in other folders)
